--- a/students_grades.ipynb
+++ b/students_grades.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkHn3w2Ncd71YjjLaAGrD6",
+      "authorship_tag": "ABX9TyPB8Iy4+eBRFy5tgCT5jHwt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1011,7 +1011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O resultado foi 0.42. Assim pode-se dizer que existe uma associação moderada entre as notas dessas 2 disciplinas (PH-121 e "
+        "O resultado foi 0.42. Assim pode-se dizer que existe uma associação moderada entre as notas dessas 2 disciplinas (PH-121 e HS-101)."
       ],
       "metadata": {
         "id": "nJSEyi4s3q3g"
